--- a/package.json
+++ b/package.json
@@ -10,8 +10,14 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/mdx": "^4.0.8",
     "@astrojs/starlight": "^0.31.1",
+    "@astrojs/svelte": "^7.0.4",
+    "@tailwindcss/vite": "^4.0.3",
     "astro": "^5.1.5",
-    "sharp": "^0.32.5"
+    "sharp": "^0.32.5",
+    "svelte": "^5.19.7",
+    "tailwindcss": "^4.0.3",
+    "typescript": "^5.7.3"
   }
 }
