--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@astrojs/mdx": "^4.0.8",
     "@astrojs/starlight": "^0.31.1",
     "@astrojs/svelte": "^7.0.4",
+    "@astrojs/vercel": "^8.0.6",
     "@tailwindcss/vite": "^4.0.3",
     "astro": "^5.1.5",
     "sharp": "^0.32.5",
