--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
   },
   "dependencies": {
     "@astrojs/mdx": "^4.0.8",
-    "@astrojs/starlight": "^0.31.1",
+    "@astrojs/starlight": "^0.32.3",
     "@astrojs/svelte": "^7.0.4",
     "@astrojs/vercel": "^8.0.6",
     "@tailwindcss/vite": "^4.0.3",
     "astro": "^5.1.5",
+    "astro-tooltips": "^0.6.2",
     "sharp": "^0.32.5",
+    "starlight-toc-overview-customizer": "^0.1.0",
+    "starlight-toc-overview-customizer-monorepo": "github:trueberryless-org/starlight-toc-overview-customizer",
     "svelte": "^5.19.7",
     "tailwindcss": "^4.0.3",
     "typescript": "^5.7.3"
